<resources>
    <string name="app_name">My Application</string>
    <string name="email_hint">insert email</string>
    <string name="password_hint">insert your password</string>
    <string name="login">login</string>
    <string name="register">register</string>
    <string name="confirm_password">confirm password</string>
    <string name="access_succed">Access Succed</string>
    <string name="non_valid_email">Non Valid Email</string>
    <string name="non_valid_password">Non Valid Password</string>
    <string name="welcome">Welcome</string>
    <string name="username">username</string>
    <string name="checkout">Checkout</string>
    <string name="min_order">Min. order :</string>
    <string name="view">menu</string>
    <string name="view_mode">view mode</string>
    <string name="total">Total: </string>
    <string name="order_label">Order Riepilogue</string>
    <string name="pay">Pay</string>
    <string name="remove_title">Are you sure?</string>
    <string name="be_careful">Be careful</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">cancel</string>
    <string name="profile">Profile</string>
</resources>

